# nvidia-ui-team

./: .gitignore  README.md  docker-compose.yml  logger.py  pyproject.toml  start_servers.ps1  test_api.py
backend/: Dockerfile  README.md  alembic.ini  check_db.py  clear_db.py  env.example  main.py  mock_services.py  requirements.txt  scaleup_nvidia.db-journal  simple_server.py
backend/app/: auth.py  database.py  external_services.py  logger.py  models.py  schemas.py
backend/app/routers/: auth.py  docker.py  health.py
frontend/: BACKEND_INTEGRATION.md  DATABASE_SETUP.md  Dockerfile  REAL_DATABASE_SETUP.md  database-schema.sql  package.json
frontend/src/app/: page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/api/auth/me/: route.ts
frontend/src/app/api/auth/signin/: route.ts
frontend/src/app/api/auth/signup/: route.ts
frontend/src/app/api/docker/images/: route.ts
frontend/src/app/contact/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/dashboard/health/: page.tsx
frontend/src/app/dashboard/upload/: page.tsx
frontend/src/app/signin/: page.tsx
frontend/src/app/signup/: page.tsx
src/nvidia_ui_team/: __init__.py  main.py
src/nvidia_ui_team/models/: basic_config.py
src/nvidia_ui_team/models/outbound/: auth.py  billing.py  images.py
src/nvidia_ui_team/routes/: auth.py  billing.py  images.py
src/nvidia_ui_team/utils/: consts.py
tel_hai/__MACOSX/tel_hai/utils/: .___init__.py
tel_hai/tel_hai/: __init__.py  main.py
tel_hai/tel_hai/models/: basic_config.py
tel_hai/tel_hai/routes/: images.py
(+7 files in other folders)
